<resources>
    <string name="app_name">City Guide</string>
    <string name="power_by">Pheakdey Luk</string>
    <string name="slogan_name">Everything your city holds!</string>
    <string name="logo_name">Get A Way</string>

    <!--     General Menu names     -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_places">ALL PLACES TO VISIT</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="e_commerce">Shopping E-commerce </string>
    <string name="script">Run Script </string>
    <string name="food_delivery">Food Delivery </string>
    <string name="taxi">Taxi </string>


    <!--     All Categories Menu names     -->
    <string name="expand_all">Expand All</string>
    <string name="car_rent">Car Rent</string>
    <string name="all_shops">All Shops</string>

    <!--  Titles and Descriptions  -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--  Categories  -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>
    <string name="hospitals">Hospitals</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>


    <string-array name="on_boarding_titles">
        <item>On Boarding Title 1</item>
        <item>On Boarding Title 2</item>
        <item>On Boarding Title 3</item>
    </string-array>
    <string-array name="on_boarding_texts">
        <item>1. Lorem Ipsum is simply dummy \ntext of the printing and typesetting \nindustry. Lorem Ipsum has been …</item>
        <item>2. Lorem Ipsum is simply dummy \ntext of the printing and typesetting \nindustry. Lorem Ipsum has been …</item>
        <item>3. Lorem Ipsum is simply dummy \ntext of the printing and typesetting \nindustry. Lorem Ipsum has been …</item>
    </string-array>
    <string name="on_boarding_bottom_text">Not ready to sign up? Explore the app</string>
    <string name="login">Login</string>


    <!--  General Strings  -->
    <string name="sign_up">Sign Up</string>
    <string name="heading">Enjoy\nTraveling</string>
    <string name="tag_line">Provider the best location</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!--  Field Strings  -->
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_all_places">AllPlacesActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="personal">  Contact </string>

</resources>