<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AllCateogriesActivity"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_search_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="30sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textAllCaps="true"
            android:padding="10dp"/>




        <RelativeLayout
            android:id="@+id/press_car_rent"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_car_background"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:textColor="@color/black"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_marginTop="-40dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/press_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_restaurant_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_restaurant_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurants"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/press_education"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_hospitals_background"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:textColor="@color/white"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/school_image"
                android:layout_marginTop="-15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/press_shops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_shops_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_shop_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/press_hotel"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/gradient_color"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:textColor="@color/black"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/transport_image"
                android:layout_marginTop="-40dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>